--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Scaling Python with Azure ML and Dask\n",
     "\n",
-    "![Describe gif](media/describe.gif)\n",
+    "![Describe gif](media/describe3.gif)\n",
     "\n",
     "Let's import some stuff"
    ]
