--- a/example.ipynb
+++ b/example.ipynb
@@ -17,6 +17,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+
+    "import os\n",
+    "cmd = 'conda env create -f setup/environment.yml'\n",
+    "os.system(cmd)\n",
+    "cmd = 'cp -r setup/dask /home/azureuser/.local/share/jupyter/kernels'\n",
+    "os.system(cmd)\n;",
+    "from IPython.core.display import HTML\n",
+    "HTML('<script>Jupyter.notebook.kernel.restart()</script>')\n",
     "import os, time, socket\n",
     "from azureml.core import Workspace, Experiment\n",
     "from azureml.widgets import RunDetails\n",
