--- a/example.ipynb
+++ b/example.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Environment setup"
+    "## Environment setup\n",
+    "\n",
+    "This notebook assumes you are using an Azure ML Compute Instance with the default kernel `azureml_py36`. This contains many unneccesary packages and is missing some packages needed for running dask. The below cells will upgrade/install these packages.\n",
+    "\n",
+    "It is important that the local environment matches the remote environment to avoid mismatch issues when submitting commands to the remote cluster. To help with this, we will use Azure ML Environments. If you want to avoid a long image build time, you may want to create a new conda environment with the minimal packages needed for your scenario. "
    ]
   },
   {
@@ -49,7 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Imports\n",
+    "\n",
+    "Import all packages used in this notebook."
    ]
   },
   {
@@ -58,22 +64,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask, os, sys, glob, socket\n",
+    "import os\n",
+    "import sys\n",
+    "import dask\n",
+    "import glob\n",
+    "import socket\n",
+    "import matplotlib\n",
+    "\n",
     "import pandas as pd\n",
     "import dask.dataframe as dd\n",
-    "from dask.distributed import Client\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from azureml.core import Workspace, Experiment, Dataset, Environment\n",
-    "from azureml.core.conda_dependencies import CondaDependencies \n",
-    "from azureml.widgets import RunDetails\n",
-    "from azureml.core.runconfig import MpiConfiguration\n",
-    "from azureml.train.estimator import Estimator\n",
-    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from datetime import datetime\n",
+    "from dask.distributed import Client\n",
     "from IPython.core.display import HTML\n",
     "\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "from datetime import datetime\n",
+    "from azureml.widgets import RunDetails\n",
+    "from azureml.train.estimator import Estimator\n",
+    "from azureml.core.runconfig import MpiConfiguration\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.core.conda_dependencies import CondaDependencies \n",
+    "from azureml.core import Workspace, Experiment, Dataset, Environment\n",
     "\n",
     "%matplotlib inline "
    ]
@@ -82,7 +93,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Azure ML Setup"
+    "## Azure ML Setup\n",
+    "\n",
+    "Get the workspace."
    ]
   },
   {
@@ -107,6 +120,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create environment \n",
+    "\n",
+    "Create the environment to be used on the remote cluster. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -123,7 +145,7 @@
     }
    ],
    "source": [
-    "env_name = 'dask7'\n",
+    "env_name = 'dask'\n",
     "\n",
     "if env_name not in ws.environments:\n",
     "    env = Environment.from_existing_conda_environment(env_name, 'azureml_py36')\n",
@@ -133,6 +155,15 @@
     "    env = ws.environments[env_name]\n",
     "    \n",
     "env.name, env.version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create dataset\n",
+    "\n",
+    "Create the dataset to be used. "
    ]
   },
   {
@@ -178,6 +209,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VM pool\n",
+    "\n",
+    "Create Azure ML VM pool for creating remote dask cluster(s)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -219,7 +259,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Local Dask Client setup"
+    "## 600 GB Dataset\n",
+    "\n",
+    "Expanded in memory, the full dataset is ~660 GB.\n",
+    "\n",
+    "It is under https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather.\n",
+    "\n",
+    "Under the container, the format is `year=*/month=*/part-*.snappy.parquet`.\n",
+    "\n",
+    "It is compressed with SNAPPY, reducing the size of files to about 8 GB.\n",
+    "\n",
+    "Without compression, the data is about 160 GB stored on disk in parquet or CSV. \n",
+    "\n",
+    "In memory, the data is about 660 GB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Local Dask Client setup\n",
+    "\n",
+    "The first step in scaling up with Dask is to simply get a bigger VM. For non-GPU Compute Instances, the max is the `STANDARD_DS15_V2` with 20 cores and 140 GB of RAM. This is suitable for interactive querying and data preparation on about 1 year of the weather data, but not on the full dataset."
    ]
   },
   {
@@ -485,6 +546,15 @@
    "source": [
     "files = dask.delayed(glob.glob)(f'{data_path}/year=*/month=*/*.parquet', recursive=True).compute()\n",
     "len(files)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Take 1 year of data\n",
+    "\n",
+    "Start with 1 year of data. This is near the limit for relatively quick interactive data prep on my VM."
    ]
   },
   {
@@ -1457,16 +1527,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scale up with Azure ML and Dask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run.cancel()"
+    "## Scale up with Azure ML and Dask\n",
+    "\n",
+    "Scale up to using the full dataset."
    ]
   },
   {
