--- a/example.ipynb
+++ b/example.ipynb
@@ -3613,7 +3613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3634,7 +3634,7 @@
     "means.temperature.plot(color='b')\n",
     "plt.title('Real average of temperature')\n",
     "plt.xlim([datetime(2008, 1, 1), datetime(2019, 12, 31)])\n",
-    "plt.ylabel('Temperature in '+u'\\u00B0'+'F')\n",
+    "plt.ylabel('Temperature in \\u00B0F')\n",
     "plt.grid()"
    ]
   },
@@ -3647,16 +3647,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time dask.delayed(df.to_parquet)(f'/{run.get_metrics()[\"datastore\"]}/outputs/noaa').compute()"
+    "%time dask.delayed(df.to_parquet)(f'/{run.get_metrics()[\"datastore\"]}/dask/output/noaa').compute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3873,7 +3873,7 @@
        "Dask Name: assign, 2016 tasks"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3891,7 +3891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3902,11 +3902,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{\n",
+       "  \"source\": [\n",
+       "    \"('workspaceblobstore', 'dask/output/noaa/**/*')\"\n",
+       "  ],\n",
+       "  \"definition\": [\n",
+       "    \"GetDatastoreFiles\"\n",
+       "  ],\n",
+       "  \"registration\": {\n",
+       "    \"id\": \"5b36693c-9f17-4019-b1ef-0d09b058d4bf\",\n",
+       "    \"name\": \"real-weather-files\",\n",
+       "    \"version\": 1,\n",
+       "    \"workspace\": \"Workspace.create(name='bigdata', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='copetersrg')\"\n",
+       "  }\n",
+       "}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dset = dset.register(ws, 'weather-files-dask')\n",
+    "dset = dset.register(ws, 'real-weather-files')\n",
     "dset"
    ]
   },
@@ -3921,7 +3945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
