--- a/example2.ipynb
+++ b/example2.ipynb
@@ -31,14 +31,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
-    "os.system('sudo cp setup/nginx.conf /etc/nginx/nginx.conf') # stupid\n",
-    "os.system('sudo service nginx restart');"
+    "os.system('sudo cp /etc/nginx/nginx.conf setup/temp.conf') # stupid\n",
+    "\n",
+    "nginx = ''\n",
+    "\n",
+    "with open('setup/temp.conf') as f:\n",
+    "    for line in f.readlines():\n",
+    "        if 'websocket/|/ws/' in line:\n",
+    "            nginx += line.replace('websocket/|/ws/', 'websocket/|/ws')\n",
+    "        else:\n",
+    "            nginx += line\n",
+    "       \n",
+    "with open('setup/temp2.conf', 'w') as f:\n",
+    "    f.write(nginx)\n",
+    "    \n",
+    "os.system('sudo mv setup/temp2.conf /etc/nginx/nginx.conf')\n",
+    "os.system('sudo service nginx restart')\n",
+    "os.system('rm setup/temp.conf');"
    ]
   },
   {
