--- a/clean.ipynb
+++ b/clean.ipynb
@@ -26,25 +26,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pip install --upgrade azureml-sdk[notebooks] azureml-dataprep[fuse] fastparquet pyarrow dask distributed lz4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pip uninstall azureml-samples -y # stupid "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# restart kernel\n",
+    "from IPython.core.display import HTML\n",
+    "HTML('<script>Jupyter.notebook.kernel.restart()</script>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -142,12 +151,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_name = 'env4dask'\n",
+    "env_name = 'env5dask'\n",
     "\n",
     "if env_name not in ws.environments:\n",
     "    env = Environment.from_existing_conda_environment(env_name, 'azureml_py36')\n",
     "    env.python.conda_dependencies.add_pip_package('mpi4py') # needed for remote cluster\n",
-    "    env.python.conda_dependencies.add_pip_package('lz4') # needed for remote cluster\n",
     "\n",
     "    env = env.register(ws)\n",
     "else:\n",
@@ -198,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool_name = 'dask-cluster'\n",
+    "pool_name = 'dask-pool'\n",
     "\n",
     "if pool_name not in ws.compute_targets:\n",
     "    # create config for Azure ML cluster\n",
@@ -247,7 +255,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/mnt/noaa'\n",
+    "data_path = '/mnt/noaa'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.system('sudo chmod 777 /mnt'); # stupid "
    ]
   },
@@ -257,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.download(data_path)"
+    "%time ds.download(data_path)"
    ]
   },
   {
@@ -338,7 +354,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "for col in list(means.columns):\n",
@@ -356,7 +376,7 @@
    "source": [
     "## Scaling with Dask\n",
     "\n",
-    "The first step in scaling up with Dask is to simply get a bigger VM. For non-GPU Compute Instances, the max is the `STANDARD_DS15_V2` with 20 cores and 140 GB of RAM. This is suitable for interactive querying and data preparation on about 1-2 years of the weather data, but not on the full dataset."
+    "The first step in scaling up with Dask is to simply get a bigger VM. For non-GPU Compute Instances, the max is the `STANDARD_DS15_V2` with 20 cores and 140 GB of RAM. This is suitable for interactive querying and data preparation on about 1 year of the weather data, but not on the full dataset."
    ]
   },
   {
@@ -365,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard_port = 7474\n",
+    "dashboard_port = 4242\n",
     "\n",
     "c = Client(dashboard_address=f':{dashboard_port}')\n",
     "c.restart()\n",
@@ -383,7 +403,9 @@
    "source": [
     "### Take some data\n",
     "\n",
-    "Take some data. The below cells may fail on smaller VMs. 1 year works well on a `STANDARD_DS15_V2`. 2 years causes workers restarting and takes a while."
+    "Take some data. The below cells may fail on smaller VMs. 1 year works semi-reliably on a `STANDARD_DS15_V2`, although computing the means fails sometimes.\n",
+    "\n",
+    "You can use the dashboard to understand what is going on with this VM being used as a \"local\" cluster. "
    ]
   },
   {
@@ -392,10 +414,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = dask.delayed(glob.glob)(f'{data_path}/year=2019/month=1?/*.parquet', recursive=True).compute()  # 3 months of data\n",
-    "#files = dask.delayed(glob.glob)(f'{data_path}/year=2019/month=*/*.parquet', recursive=True).compute()       # 1 year of data\n",
-    "#files = dask.delayed(glob.glob)(f'{data_path}/year=201[8-9]/month=*/*.parquet', recursive=True).compute()   # 2 years of data\n",
-    "#files = dask.delayed(glob.glob)(f'{data_path}/year=201?/month=*/*.parquet', recursive=True).compute()       # 10 years of data\n",
+    "#files = glob.glob(f'{data_path}/year=2019/month=1?/*.parquet', recursive=True)     # 3 months of data\n",
+    "files = glob.glob(f'{data_path}/year=2019/month=*/*.parquet', recursive=True)      # 1 year of data\n",
+    "#files = glob.glob(f'{data_path}/year=201[8-9]/month=*/*.parquet', recursive=True)  # 2 years of data\n",
+    "#files = glob.glob(f'{data_path}/year=201?/month=*/*.parquet', recursive=True)      # 10 years of data\n",
     "len(files)"
    ]
   },
@@ -405,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.from_delayed([dask.delayed(pd.read_parquet)(file) for file in files])\n",
+    "df = dd.from_delayed([dask.delayed(pd.read_parquet)(file) for file in files]) \n",
     "df.head()"
    ]
   },
@@ -443,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time means = df.groupby(df.datetime.dt.floor('d')).mean().compute()\n",
+    "%time means = df.groupby(df.datetime.dt.floor('d')).mean().compute() # slow, prone to error \n",
     "means.head()"
    ]
   },
@@ -502,7 +524,7 @@
     "                environment_definition  = env, \n",
     "                script_params           = script_params,\n",
     "                inputs                  = [dset_input],\n",
-    "                node_count              = 10,\n",
+    "                node_count              = 35,\n",
     "                distributed_training    = MpiConfiguration()\n",
     "               )\n",
     "\n",
@@ -539,7 +561,7 @@
    "source": [
     "# port to forward the dask dashboard to on the compute instance\n",
     "# we do not use 8787 because it is already in use \n",
-    "dashboard_port = 7070\n",
+    "dashboard_port = 4343\n",
     "\n",
     "print(\"waiting for scheduler node's ip\")\n",
     "while run.get_status() != 'Canceled' and 'scheduler' not in run.get_metrics():\n",
@@ -584,13 +606,6 @@
    "source": [
     "### Take all the data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -665,7 +680,7 @@
     "    plt.grid()\n",
     "    \n",
     "    # optionally, log the image to the run\n",
-    "    run.log_image(plot=plt)"
+    "    run.log_image(f'mean_{col}', plot=plt)"
    ]
   },
   {
@@ -674,7 +689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False).persist()"
+    "#df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False).persist() # persist and sort data by day "
    ]
   },
   {
@@ -691,8 +706,8 @@
    "outputs": [],
    "source": [
     "## insert any Pandas-like Dask data prep code \n",
-    "df['temperature'] = df['temperature']*(9/5)+32\n",
-    "means['temperature'] = means['temperature']*(9/5)+32"
+    "df['temperature'] = df['temperature']*(9/5)+32       # 'Merica\n",
+    "means['temperature'] = means['temperature']*(9/5)+32 # skip recomputing this "
    ]
   },
   {
@@ -713,7 +728,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Write data"
+    "## Write data\n",
+    "\n",
+    "**Important:** this is slow and will put 200 GB of CSVs in your default storage."
    ]
   },
   {
@@ -722,7 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time dask.delayed(df.to_parquet)(f'/{run.get_metrics()[\"datastore\"]}/dask/output/noaa').compute()"
+    "%time dask.delayed(df.to_csv)(f'/{run.get_metrics()[\"datastore\"]}/dask/output/noaa/data-part-*.csv').compute()"
    ]
   },
   {
@@ -740,7 +757,7 @@
    "source": [
     "from azureml.core import Dataset\n",
     "\n",
-    "dset = Dataset.File.from_files((ws.get_default_datastore(), '/dask/output/noaa/**/*'))"
+    "dset = Dataset.File.from_files((ws.get_default_datastore(), '/dask/output/noaa/**/*.csv'))"
    ]
   },
   {
