forgot this one

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -151,12 +151,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_name = 'env5dask'\n",
+    "env_name = 'dask-env'\n",
     "\n",
     "if env_name not in ws.environments:\n",
     "    env = Environment.from_existing_conda_environment(env_name, 'azureml_py36')\n",
     "    env.python.conda_dependencies.add_pip_package('mpi4py') # needed for remote cluster\n",
-    "\n",
     "    env = env.register(ws)\n",
     "else:\n",
     "    env = ws.environments[env_name]\n",
@@ -180,7 +179,7 @@
    "outputs": [],
    "source": [
     "dataset_name = 'weather-files'\n",
-    "data_paths   = ['https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/*/*/*.parquet']\n",
+    "data_paths   = ['https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/**']\n",
     "\n",
     "if dataset_name not in ws.datasets:\n",
     "    ds = Dataset.File.from_files(data_paths, validate=False)\n",
@@ -354,11 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for col in list(means.columns):\n",
@@ -414,11 +409,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#files = glob.glob(f'{data_path}/year=2019/month=1?/*.parquet', recursive=True)     # 3 months of data\n",
-    "files = glob.glob(f'{data_path}/year=2019/month=*/*.parquet', recursive=True)      # 1 year of data\n",
-    "#files = glob.glob(f'{data_path}/year=201[8-9]/month=*/*.parquet', recursive=True)  # 2 years of data\n",
-    "#files = glob.glob(f'{data_path}/year=201?/month=*/*.parquet', recursive=True)      # 10 years of data\n",
-    "len(files)"
+    "start = 2017\n",
+    "end   = 2018"
    ]
   },
   {
@@ -427,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.from_delayed([dask.delayed(pd.read_parquet)(file) for file in files]) \n",
+    "df = dask.delayed(dd.read_parquet)([f'{data_path}/year={year}/month=*/*.parquet' for year in range(start, end+1)], engine='pyarrow').compute().persist()\n",
     "df.head()"
    ]
   },
@@ -480,7 +472,7 @@
     "    #plt.style.use('dark_background')\n",
     "    means[col].plot(color='b')\n",
     "    plt.title('Average of {}'.format(col))\n",
-    "    plt.xlim([datetime(2019, 1, 1), datetime(2019, 12, 31)])\n",
+    "    plt.xlim([datetime(start, 1, 1), datetime(end, 12, 31)])\n",
     "    plt.grid()"
    ]
   },
