switch to ADLFS

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Scaling Python with Azure ML and Dask\n",
     "\n",
-    "![Describe gif](media/describe5.gif)"
+    "![Describe gif](media/describe6.gif)"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --upgrade azureml-sdk[notebooks] azureml-dataprep[fuse] fastparquet pyarrow dask distributed lz4"
+    "pip install --upgrade dask[complete] adlfs lz4 distributed fastparquet pyarrow azureml-sdk[notebooks] azureml-dataprep[fuse]"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip uninstall azureml-samples -y # stupid "
+    "pip uninstall azureml-samples -y"
    ]
   },
   {
@@ -136,6 +136,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STORAGE_OPTIONS={'account_name': 'bigdata4dask', 'account_key': 'IeOeTQPKs+Z7pPF6ZFw1Z8qo2/v15+kH4Y7FSOvaaALyZezJ7yIZHhw6JjUtm7dvZMAkF0Oy7I1Fs6MLh4lB0w=='}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_name = 'dask-env'\n",
+    "env_name = 'dask'\n",
     "\n",
     "if env_name not in ws.environments:\n",
     "    env = Environment.from_existing_conda_environment(env_name, 'azureml_py36')\n",
@@ -177,11 +186,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_name = 'weather-files'\n",
-    "data_paths   = ['https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/**']\n",
+    "dataset_name = 'noaa-isd-files'\n",
+    "data_paths   = ['https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather/year=*/month=*/*.parquet']\n",
+    "local_path   = '/mnt/data/noaa/isd'\n",
+    "remote_path  = '/datasets/noaa/isd'\n",
     "\n",
     "if dataset_name not in ws.datasets:\n",
     "    ds = Dataset.File.from_files(data_paths, validate=False)\n",
+    "    # begin stupid \n",
+    "    os.system('sudo chmod 777 /mnt') # stupid \n",
+    "    ds.download(local_path)\n",
+    "    ws.get_default_datastore().upload(local_path, remote_path)\n",
+    "    ds = Dataset.File.from_files((ws.get_default_datastore(), remote_path))\n",
+    "    # end stupid\n",
     "    ds = ds.register(ws, dataset_name)\n",
     "else:\n",
     "    ds = ws.datasets[dataset_name]\n",
@@ -204,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool_name = 'dask-pool'\n",
+    "pool_name = 'manyraspberrypis'\n",
     "\n",
     "if pool_name not in ws.compute_targets:\n",
     "    # create config for Azure ML cluster\n",
@@ -229,6 +246,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Startup cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_name   = 'dask2020'\n",
+    "\n",
+    "script_params = {\n",
+    "    '--datastore': ws.get_default_datastore(),\n",
+    "    #'--script'   : 'run.py' # run code in run.py on cluster and teardown (batch processing)\n",
+    "}\n",
+    "\n",
+    "est = Estimator('setup', \n",
+    "                compute_target          = ct, \n",
+    "                entry_script            = 'start.py', \n",
+    "                environment_definition  = env, \n",
+    "                script_params           = script_params,\n",
+    "                node_count              = 20,\n",
+    "                distributed_training    = MpiConfiguration()\n",
+    "               )\n",
+    "\n",
+    "#run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
+    "run = Experiment(ws, exp_name).submit(est)\n",
+    "run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dataset overview\n",
     "\n",
     "This uses an [Azure Open Dataset](https://azure.microsoft.com/services/open-datasets/catalog/) of [NOAA Integrated Surface Data (ISD)](https://azure.microsoft.com/services/open-datasets/catalog/noaa-integrated-surface-data/) containing worldwide hourly weather data such as temperature, precipitation, and wind. \n",
@@ -241,47 +292,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Download dataset"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/mnt/noaa'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.system('sudo chmod 777 /mnt'); # stupid "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time ds.download(data_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = glob.glob(f'{data_path}/year=*/month=*/*.parquet', recursive=True)\n",
-    "len(files)"
+    "%time files = glob.glob(f'{local_path}/year=*/month=*/*.parquet', recursive=True)\n",
+    "files[-5:]"
    ]
   },
   {
@@ -297,8 +314,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob.glob(f'{data_path}/year=2019/month=12/*.parquet', recursive=True) # 1 month of data\n",
-    "files"
+    "files = glob.glob(f'{local_path}/year=2019/month=12/*.parquet', recursive=True) # 1 month of data\n",
+    "files[-5:]"
    ]
   },
   {
@@ -368,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scaling with Dask\n",
+    "## Scaling with Dask 'locally'\n",
     "\n",
     "The first step in scaling up with Dask is to simply get a bigger VM. For non-GPU Compute Instances, the max is the `STANDARD_DS15_V2` with 20 cores and 140 GB of RAM. This is suitable for interactive querying and data preparation on about 1 year of the weather data, but not on the full dataset."
    ]
@@ -379,11 +396,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard_port = 4242\n",
+    "dashboard_port = 4567\n",
     "\n",
     "c = Client(dashboard_address=f':{dashboard_port}')\n",
-    "c.restart()\n",
-    "\n",
     "print(f'\\n\\n{c}')\n",
     "\n",
     "# need to get the dashboard link \n",
@@ -408,18 +423,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = 2017\n",
-    "end   = 2018"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = dask.delayed(dd.read_parquet)([f'{data_path}/year={year}/month=*/*.parquet' for year in range(start, end+1)], engine='pyarrow').compute().persist()\n",
-    "df.head()"
+    "df = dd.read_parquet(f'{local_path}/year=201[7-8]/month=*/*.parquet', engine='pyarrow')\n",
+    "#df = df.repartition(npartitions=df.npartitions*10).persist()\n",
+    "%time df.head()"
    ]
   },
   {
@@ -471,7 +477,7 @@
     "    #plt.style.use('dark_background')\n",
     "    means[col].plot(color='b')\n",
     "    plt.title('Average of {}'.format(col))\n",
-    "    plt.xlim([datetime(start, 1, 1), datetime(end, 12, 31)])\n",
+    "    plt.xlim([datetime(2017, 1, 1), datetime(2018, 12, 31)])\n",
     "    plt.grid()"
    ]
   },
@@ -488,40 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scale with Dask and Azure ML\n",
-    "\n",
-    "Scale up to using the full dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp_name   = 'dask'\n",
-    "mount      = False\n",
-    "data_path  = '/mnt/noaa'\n",
-    "dset_input = ds.as_named_input('data').as_mount(data_path) if mount else ds.as_named_input('data').as_download(data_path)\n",
-    "\n",
-    "script_params = {\n",
-    "    '--datastore': ws.get_default_datastore(),\n",
-    "    #'--script'   : 'run.py' # run code in run.py on cluster and teardown (batch processing)\n",
-    "}\n",
-    "\n",
-    "est = Estimator('setup', \n",
-    "                compute_target          = ct, \n",
-    "                entry_script            = 'start.py', \n",
-    "                environment_definition  = env, \n",
-    "                script_params           = script_params,\n",
-    "                inputs                  = [dset_input],\n",
-    "                node_count              = 35,\n",
-    "                distributed_training    = MpiConfiguration()\n",
-    "               )\n",
-    "\n",
-    "#run = next(ws.experiments[exp_name].get_runs()) # use this to get existing run (if kernel restarted, etc)\n",
-    "run = Experiment(ws, exp_name).submit(est)\n",
-    "run"
+    "## Scale up with Dask and Azure ML"
    ]
   },
   {
@@ -537,11 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wait for cluster to setup\n",
-    "\n",
-    "Wait for the cluster to spin up, the run to start, and the `start.py` script to complete. At this point, information needed for connecting the cluster will be logged back to the run.\n",
-    "\n",
-    "The below cell waits for that information to be logged to the run, sets up port forwarding for the Dask dashboard, and prints the url. Make sure to check out the dashboard as you run through the rest of the notebook."
+    "### Connect to cluster"
    ]
   },
   {
@@ -552,7 +521,7 @@
    "source": [
     "# port to forward the dask dashboard to on the compute instance\n",
     "# we do not use 8787 because it is already in use \n",
-    "dashboard_port = 4343\n",
+    "dashboard_port = 4242\n",
     "\n",
     "print(\"waiting for scheduler node's ip\")\n",
     "while run.get_status() != 'Canceled' and 'scheduler' not in run.get_metrics():\n",
@@ -565,26 +534,13 @@
     "    print(f'Setting up port forwarding...')\n",
     "    os.system(f'killall socat') # kill all socat processes - cleans up previous port forward setups \n",
     "    os.system(f'setsid socat tcp-listen:{dashboard_port},reuseaddr,fork tcp:{run.get_metrics()[\"dashboard\"]} &')\n",
-    "    print(f'Cluster is ready to use.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Connect to cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f'Cluster is ready to use.')\n",
+    "\n",
     "c = Client(f'tcp://{run.get_metrics()[\"scheduler\"]}')\n",
-    "c.restart()\n",
     "\n",
     "print(f'\\n\\n{c}')\n",
+    "\n",
+    "c.restart()\n",
     "\n",
     "# need to get the dashboard link \n",
     "dashboard_url = f'https://{socket.gethostname()}-{dashboard_port}.{ws.get_details()[\"location\"]}.instances.azureml.net/status'\n",
@@ -604,8 +560,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = dask.delayed(glob.glob)(f'{data_path}/year=*/month=*/*.parquet', recursive=True).compute()\n",
-    "files"
+    "files = glob.glob(f'{local_path}/year=*/month=*/*.parquet', recursive=True)\n",
+    "files = [file.replace('/mnt/', 'abfs://') for file in files if '2019' not in file]\n",
+    "files[-5:]"
    ]
   },
   {
@@ -614,8 +571,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = dd.from_delayed([dask.delayed(pd.read_parquet)(file) for file in files])\n",
+    "df = dask.delayed(dd.read_parquet)(files, engine='pyarrow', storage_options=STORAGE_OPTIONS).compute()\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False).persist() # persist and sort data by day \n",
+    "#df = df.persist()\n",
+    "%time len(df)"
    ]
   },
   {
@@ -667,7 +635,7 @@
     "    #plt.style.use('dark_background')\n",
     "    means[col].plot(color='b')\n",
     "    plt.title('Average of {}'.format(col))\n",
-    "    plt.xlim([datetime(2008, 1, 1), datetime(2019, 12, 31)])\n",
+    "    plt.xlim([datetime(2008, 1, 1), datetime(2018, 12, 31)])\n",
     "    plt.grid()\n",
     "    \n",
     "    # optionally, log the image to the run\n",
@@ -680,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = df.set_index(dd.to_datetime(df.datetime).dt.floor('d'), sorted=False).persist() # persist and sort data by day "
+    "run"
    ]
   },
   {
@@ -697,22 +665,7 @@
    "outputs": [],
    "source": [
     "## insert any Pandas-like Dask data prep code \n",
-    "df['temperature'] = df['temperature']*(9/5)+32       # 'Merica\n",
-    "means['temperature'] = means['temperature']*(9/5)+32 # skip recomputing this "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(16, 8))\n",
-    "means.temperature.plot(color='b')\n",
-    "plt.title('Real average of temperature')\n",
-    "plt.xlim([datetime(2008, 1, 1), datetime(2019, 12, 31)])\n",
-    "plt.ylabel('Temperature in \\u00B0F')\n",
-    "plt.grid()"
+    "df['temperature'] = df['temperature']*(9/5)+32       # 'Merica"
    ]
   },
   {
@@ -721,7 +674,7 @@
    "source": [
     "## Write data\n",
     "\n",
-    "**Important:** this is slow and will put 200 GB of CSVs in your default storage."
+    "**Important:** write back to ADLS gen 2."
    ]
   },
   {
@@ -730,35 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time dask.delayed(df.to_csv)(f'/{run.get_metrics()[\"datastore\"]}/dask/output/noaa/data-part-*.csv').compute()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from azureml.core import Dataset\n",
-    "\n",
-    "dset = Dataset.File.from_files((ws.get_default_datastore(), '/dask/output/noaa/**/*.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dset = dset.register(ws, 'real-weather-files')\n",
-    "dset"
+    "%time df = dask.delayed(df.to_parquet)(f'abfs://data/noaa/isd_out.parquet', compression='lz4', storage_options=STORAGE_OPTIONS).compute()"
    ]
   },
   {
