--- a/example.ipynb
+++ b/example.ipynb
@@ -160,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STORAGE_OPTIONS={'account_name': 'bigdata4dask', 'account_key': 'IeOeTQPKs+Z7pPF6ZFw1Z8qo2/v15+kH4Y7FSOvaaALyZezJ7yIZHhw6JjUtm7dvZMAkF0Oy7I1Fs6MLh4lB0w=='}"
+    "STORAGE_OPTIONS={'account_name': name, 'account_key': key}"
    ]
   },
   {
